--- a/themes/rethink/style.css
+++ b/themes/rethink/style.css
@@ -1,9 +1,9 @@
 /*!
-Theme Name: RED Starter Theme
+Theme Name: Rethink Theme
 Theme URI: http://underscores.me/
-Author: RED Academy
+Author: Vera Sun, Rosh Canlas, Lovely Eden
 Author URI: http://www.redacademy.com
-Description: A WordPress starter theme for RED Academy students.
+Description: A custom WordPress theme for RC Forward
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
