change theme name to avoid conflict

--- a/themes/rcforward/sass/style.scss
+++ b/themes/rcforward/sass/style.scss
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Rethink Theme
+Theme Name: RC Forward
 Theme URI: http://underscores.me/
 Author: Vera Sun, Rosh Canlas, Lovely Eden
 Author URI: http://www.redacademy.com
