--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Rethink Theme
+Theme Name: RC Forward
 Theme URI: http://underscores.me/
 Author: Vera Sun, Rosh Canlas, Lovely Eden
 Author URI: http://www.redacademy.com
