Add CFS to footer.php

--- a/themes/rcforward/sass/_content.scss
+++ b/themes/rcforward/sass/_content.scss
@@ -1,49 +1,49 @@
-/*--------------------------------------------------------------
-# Content
---------------------------------------------------------------*/
+// /*--------------------------------------------------------------
+// # Content
+// --------------------------------------------------------------*/
 
-/* Posts and pages */
+// /* Posts and pages */
 
-.sticky {
-	display: block;
-}
+// .sticky {
+// 	display: block;
+// }
 
-.hentry {
-	margin: 0 0 $base__space-unit;
-}
+// .hentry {
+// 	margin: 0 0 $base__space-unit;
+// }
 
-.updated:not(.published){
-	display: none;
-}
+// .updated:not(.published){
+// 	display: none;
+// }
 
-.single .byline,
-.group-blog .byline {
-	display: inline;
-}
+// .single .byline,
+// .group-blog .byline {
+// 	display: inline;
+// }
 
-.page-content,
-.entry-content,
-.entry-summary {
-	margin: $base__space-unit 0 0;
-}
+// .page-content,
+// .entry-content,
+// .entry-summary {
+// 	margin: $base__space-unit 0 0;
+// }
 
-.page-links {
-	clear: both;
-	margin: 0 0 $base__space-unit;
-}
+// .page-links {
+// 	clear: both;
+// 	margin: 0 0 $base__space-unit;
+// }
 
-/* Asides */
+// /* Asides */
 
-.blog .format-aside .entry-title,
-.archive .format-aside .entry-title {
-	display: none;
-}
+// .blog .format-aside .entry-title,
+// .archive .format-aside .entry-title {
+// 	display: none;
+// }
 
-/* Comments */
+// /* Comments */
 
-.comment-content a {
-	word-wrap: break-word;
-}
-.bypostauthor {
-	display: block;
-}
+// .comment-content a {
+// 	word-wrap: break-word;
+// }
+// .bypostauthor {
+// 	display: block;
+// }
