--- a/themes/rcforward/sass/_variables.scss
+++ b/themes/rcforward/sass/_variables.scss
@@ -31,6 +31,16 @@ $grounded__green: #192726;
 $sustainable__green: #8CB33E;
 $forest__green: #578744;
 $cream__background: #F9F5ED;
+$black: #000;
+$white: #fff;
+
+// RC Fonts
+$gotham__font: 'Montserrat', sans-serif;
+
+// RC Mixins
+$tablet-width: 600px;
+$desktop-width: 1000px;
+$max-screen-size: 1240px;
 
 $font__main: sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
