--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -675,21 +675,20 @@ object {
         color: #fff; }
 
 /* Navigation */
-.main-navigation ul {
+.main-navigation .menu, .main-navigation .sub-menu {
   padding: 0;
   margin: 0;
   text-align: center; }
-  .main-navigation ul li {
-    padding: 3%; }
 
 .menu-item {
-  background: #14225f;
   border-top: 1px solid #fff; }
   .menu-item a {
     color: #fff; }
 
-.sub-menu li {
+.sub-menu {
   background: #fff;
-  border-top: 1px solid #14225f; }
-  .sub-menu li a {
-    color: #14225f; }
+  display: none; }
+  .sub-menu li {
+    border-top: 1px solid #14225f; }
+    .sub-menu li a {
+      color: #14225f; }
