Add icon images to footer.php

--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -3,3 +3,7 @@
 --------------------------------------------------------------*/
 
 /* Front page */
+
+.footer-sidebar, .site-footer {
+    background-color: $credible__blue;
+}
