--- a/themes/rcforward/sass/_variables.scss
+++ b/themes/rcforward/sass/_variables.scss
@@ -35,7 +35,7 @@ $black: #000;
 $white: #fff;
 
 // RC Fonts
-$gotham__font: 'Montserrat', sans-serif;
+$gotham__font: 'Montserrat Light', sans-serif;
 
 // RC Mixins
 $tablet-width: 600px;
