add carousel and add style

--- a/themes/rcforward/sass/_variables.scss
+++ b/themes/rcforward/sass/_variables.scss
@@ -20,6 +20,7 @@ $color__link-visited: purple;
 $color__link-hover: midnightblue;
 
 // RC Primary Stylings
+// #48219f purple color for carousel shadow
 $code__blue: #00BEA8;
 $innovative__purple: #42299A;
 $credible__blue: #14225F;
