--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -377,3 +377,69 @@ th {
     border-top: 1px solid #14225F; }
     .sub-menu li a {
       color: #14225F; }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
+.main-carousel {
+  max-width: 980px;
+  margin: 2rem auto; }
+
+.flickity-viewport {
+  position: relative; }
+
+.flickity-prev-next-button {
+  z-index: 99; }
+
+ol.flickity-page-dots {
+  margin-bottom: -2rem; }
+
+.carousel-cell {
+  width: 23.5%;
+  /* half-width */
+  height: 270px;
+  margin: 0 1%;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px solid #42299A; }
+  .carousel-cell img {
+    max-width: 100%;
+    max-height: 100%; }
+  .carousel-cell .thumbnail-wrapper {
+    height: 190px;
+    position: relative; }
+  .carousel-cell .charity-logo {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    padding: 15px;
+    background: white;
+    bottom: -30px;
+    border-radius: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%); }
+    .carousel-cell .charity-logo img {
+      width: 60%;
+      display: block;
+      margin: 0;
+      width: 100%; }
+  .carousel-cell .post-title {
+    margin-top: 1.8rem;
+    font-size: 0.8rem;
+    text-align: center; }
+
+.browse_charities_button {
+  display: block;
+  margin: 7rem;
+  text-align: center; }
