Add media queries for navigation and style charity page

--- a/themes/rcforward/sass/_hamburger.scss
+++ b/themes/rcforward/sass/_hamburger.scss
@@ -80,6 +80,8 @@
 /* Header */
 .site-header {
   background: #14225f;
+  // position: fixed;
+  width: 100%;
   .header-container {
     margin: auto;
     position: relative;
