--- a/themes/rcforward/sass/_charity.scss
+++ b/themes/rcforward/sass/_charity.scss
@@ -2,12 +2,38 @@
 # Single Charity Page
 --------------------------------------------------------------*/
 
-.charity-image {
-    background: yellow;
-            width: 100%;
-            height: 250px;
-            img {
-              height: 100%;
-              object-fit: cover;
-            }
-        }
+.single-charity {
+  .charity-header {
+    text-align: center;
+    position: relative;
+    .charity-image {
+      width: 100%;
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100vh;
+      }
+    }
+    .charity-logo-container {
+      position: absolute;
+      // background: white;
+      // display: flex;
+      // align-items: center;
+      // justify-content: center;
+      // width: 25%;
+      // height: 25%;
+      border-radius: -3px;
+      bottom: 0;
+      text-align: center;
+      bottom: -10px;
+      .charity-logo {
+        text-align: center;
+        width: 20%;
+        border-radius: 50%;
+      }
+    }
+  }
+  .entry-content {
+    text-align: center;
+  }
+}
