--- a/themes/rcforward/sass/_elements.scss
+++ b/themes/rcforward/sass/_elements.scss
@@ -71,3 +71,12 @@
 //   margin: 0 0 $base__space-unit;
 //   width: 100%;
 // }
+
+a{
+    text-decoration: none;
+    color:$color__text-main;
+    font-weight:600;
+    &:active, &:hover{
+        text-decoration: none;
+    }
+}
