--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -22,7 +22,6 @@ body {
         display: flex;
         flex-direction: column;
         text-align: center;
-
         .fund-header {
           position: relative;
           .fund-image {
@@ -76,6 +75,10 @@ body {
           .main-content {
               margin-top: 2rem;
             .fund-allowcation {
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                width: 100%;
               h3 {
                   width: 65%;
                 word-wrap: break-word;
@@ -86,11 +89,27 @@ body {
               .fund-allowcations {
                     display: flex;
                     justify-content: center;
+                    flex-direction: column;
+                    margin: 0 10rem;
                   .single-allocation {
                      display: flex;
                      flex-direction: row;
+                     justify-content: center;
+                     margin: 4rem 0;
                      .allocation-text {
-                      
+                      display: flex;
+                      align-content: center;
+                      flex-direction: column;
+                      margin-left: 3rem;
+                      font-size: 2rem;
+                      .percentage {
+                          font-weight: bolder;
+                          font-size: 2.5rem;
+                      }
+                      .description {
+                          font-weight: lighter;
+                          word-wrap: wrap;
+                      }
                      } 
                   }
               }
