--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -381,27 +381,66 @@ body {
         margin: 0 auto; }
     .single-fund .hfeed .site-content .type-fund .entry-content .main-content {
       margin-top: 2rem; }
-      .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation h3 {
-        width: 65%;
-        word-wrap: break-word;
-        margin: 0 auto;
-        color: #14225F;
-        font-size: 2rem; }
-      .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations {
+      .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
-                justify-content: center; }
-        .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations .single-allocation {
+                justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        width: 100%; }
+        .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation h3 {
+          width: 65%;
+          word-wrap: break-word;
+          margin: 0 auto;
+          color: #14225F;
+          font-size: 2rem; }
+        .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations {
           display: -webkit-box;
           display: -ms-flexbox;
           display: flex;
-          -webkit-box-orient: horizontal;
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center;
+          -webkit-box-orient: vertical;
           -webkit-box-direction: normal;
-              -ms-flex-direction: row;
-                  flex-direction: row; }
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          margin: 0 10rem; }
+          .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations .single-allocation {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: horizontal;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: row;
+                    flex-direction: row;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            margin: 4rem 0; }
+            .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations .single-allocation .allocation-text {
+              display: -webkit-box;
+              display: -ms-flexbox;
+              display: flex;
+              -ms-flex-line-pack: center;
+                  align-content: center;
+              -webkit-box-orient: vertical;
+              -webkit-box-direction: normal;
+                  -ms-flex-direction: column;
+                      flex-direction: column;
+              margin-left: 3rem;
+              font-size: 2rem; }
+              .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations .single-allocation .allocation-text .percentage {
+                font-weight: bolder;
+                font-size: 2.5rem; }
+              .single-fund .hfeed .site-content .type-fund .entry-content .main-content .fund-allowcation .fund-allowcations .single-allocation .allocation-text .description {
+                font-weight: lighter;
+                word-wrap: wrap; }
 
 .hamburger {
   display: inline-block;
