--- a/themes/rcforward/sass/_mixins.scss
+++ b/themes/rcforward/sass/_mixins.scss
@@ -22,3 +22,14 @@
         @content;
     }
 }
+
+@mixin display-flex(
+  $flexDirection: row,
+  $justifyContent: center,
+  $alignItems: center
+) {
+  display: flex;
+  flex-direction: $flexDirection;
+  justify-content: $justifyContent;
+  align-items: $alignItems;
+}
