--- a/themes/rcforward/sass/style.scss
+++ b/themes/rcforward/sass/style.scss
@@ -65,9 +65,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "page-templates";
 @import "hamburger";
 @import "flickity";
-<<<<<<< HEAD
 @import "charity";
-=======
 @import "footer";
+@import "front-page";
 
->>>>>>> 6cd77815ec9df448f97a54c3c80ba99f2d286b6c
