--- a/themes/rcforward/sass/_charity.scss
+++ b/themes/rcforward/sass/_charity.scss
@@ -11,29 +11,97 @@
       img {
         object-fit: cover;
         width: 100%;
-        height: 100vh;
+        height: 70vh;
       }
     }
     .charity-logo-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       position: absolute;
-      // background: white;
-      // display: flex;
-      // align-items: center;
-      // justify-content: center;
-      // width: 25%;
-      // height: 25%;
-      border-radius: -3px;
-      bottom: 0;
-      text-align: center;
-      bottom: -10px;
+      background: $white;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      bottom: -61px;
+      padding-left: 35px;
+      padding-right: 35px;
+      left: 50%;
+      transform: translateX(-50%);
       .charity-logo {
         text-align: center;
-        width: 20%;
-        border-radius: 50%;
+        width: 100%;
       }
     }
   }
   .entry-content {
     text-align: center;
+    margin-top: 66px;
+    h2 {
+      font-size: 2em;
+    }
+    .amount-funded {
+      p {
+        font-size: 42px;
+        margin: 0 20px 0 0;
+        color: $innovative__purple;
+        font-family: $gotham__font;
+        font-weight: bold;
+        line-height: 60px;
+        letter-spacing: normal;
+      }
+      .chimp-donate-form {
+        background: $code__blue;
+        margin-top: 10px;
+        width: 160px;
+        height: 60px;
+        border-radius: 6px;
+        color: $grounded__green;
+        font-weight: bold;
+      }
+    }
+    .charity-description{
+            height: 137px;	
+            width: 728px;
+            margin-left: auto;
+            margin-right: auto;
+            font-family: $gotham__font;
+            font-size: 24px;	
+            font-weight: 300;	
+            line-height: 33px;	
+            text-align: center;
+            margin-bottom: 64px;
+    }
+    .charity-video{
+        iframe{
+        height: 483.34px;	
+        width: 728px;
+        }
+    }
+    .main-content{
+        display:flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 1240px;
+        margin: auto;
+        .single-content{
+            display: flex;
+            .content-image{
+                width: 50%;
+            }
+        }
+
+    }
   }
+  .browse-charities-title{
+      text-align: center;	
+      color:$credible__blue;
+      font-family: $gotham__font;	
+      font-size: 28px;	
+      font-weight: bold;	
+      line-height: 31px;
+  }
+
 }
+
+/* Main Content Section */
