--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -238,13 +238,11 @@ a {
 @media (min-width: 600px) {
   .main-navigation .menu-item-has-children {
     position: relative; }
-    .main-navigation .menu-item-has-children:hover > ul {
+    .main-navigation .menu-item-has-children:hover > .sub-menu {
       position: absolute;
       right: 0;
       z-index: 99;
       display: block; } }
-<<<<<<< HEAD
-=======
 
 /*--------------------------------------------------------------
 # Accessibility
@@ -303,7 +301,6 @@ a {
   clear: both;
   content: "";
   display: table; }
->>>>>>> d0445e16ed318c7fa56a62cc4b345c6e24de909d
 
 /*--------------------------------------------------------------
 # Widgets
@@ -333,6 +330,16 @@ body {
   @media (min-width: 1000px) {
     .site-content {
       padding: 5rem; } }
+
+/* Chimp Donate Button */
+.chimp-donate-form {
+  background: #00BEA8;
+  margin-top: 10px;
+  width: 160px;
+  height: 60px;
+  border-radius: 6px;
+  color: #192726;
+  font-weight: bold; }
 
 /*--------------------------------------------------------------
 # Page Templates
@@ -425,6 +432,9 @@ body {
               -ms-flex-direction: row;
                   flex-direction: row; }
 
+/*!
+* Hamburger Menu
+*/
 .hamburger {
   display: inline-block;
   cursor: pointer;
@@ -499,10 +509,13 @@ body {
     background: #14225f; }
   .hamburger button {
     -webkit-box-shadow: none;
-            box-shadow: none; }
+            box-shadow: none;
+    background: none;
+    border: none; }
 
 /* Header */
 .site-header {
+  top: 0;
   background: #14225f;
   width: 100%;
   -webkit-box-pack: justify;
@@ -538,10 +551,7 @@ body {
     width: 100%; }
     @media (min-width: 600px) {
       .site-header .main-navigation {
-        width: 60%;
-        display: -webkit-inline-box;
-        display: -ms-inline-flexbox;
-        display: inline-flex; } }
+        width: 60%; } }
     .site-header .main-navigation .menu {
       list-style: none;
       margin: 0;
@@ -566,9 +576,13 @@ body {
   .site-header .menu .menu-item-71 {
     padding-top: 15px; }
     .site-header .menu .menu-item-71 .sub-menu {
+      display: none;
       background: #fff;
       list-style: none;
       padding: 0; }
+      @media (min-width: 600px) {
+        .site-header .menu .menu-item-71 .sub-menu {
+          display: none; } }
       .site-header .menu .menu-item-71 .sub-menu .menu-item {
         border-bottom: 1px solid #14225F;
         padding: 16px; }
@@ -702,28 +716,26 @@ ol.flickity-page-dots {
       width: 100%; }
 
 .single-charity .entry-content {
-  text-align: center;
   margin-top: 66px; }
   .single-charity .entry-content h2 {
+    font-style: normal;
+    text-align: center;
     font-size: 2em; }
-  .single-charity .entry-content .amount-funded p {
-    font-size: 42px;
-    margin: 0 20px 0 0;
-    color: #42299A;
-    font-family: "Montserrat Light", sans-serif;
-    font-weight: bold;
-    line-height: 60px;
-    letter-spacing: normal; }
-  .single-charity .entry-content .amount-funded .chimp-donate-form {
-    background: #00BEA8;
-    margin-top: 10px;
-    width: 160px;
-    height: 60px;
-    border-radius: 6px;
-    color: #192726;
-    font-weight: bold; }
+  .single-charity .entry-content .amount-funded {
+    background-color: rgba(216, 216, 216, 0.18);
+    text-align: center; }
+    .single-charity .entry-content .amount-funded p {
+      font-size: 42px;
+      margin: 0 20px 0 0;
+      color: #42299A;
+      font-family: "Montserrat Light", sans-serif;
+      font-weight: bold;
+      line-height: 60px;
+      letter-spacing: normal;
+      font-style: normal; }
   .single-charity .entry-content .charity-description {
     height: 137px;
+    font-style: normal;
     width: 728px;
     margin-left: auto;
     margin-right: auto;
@@ -733,27 +745,11 @@ ol.flickity-page-dots {
     line-height: 33px;
     text-align: center;
     margin-bottom: 64px; }
-  .single-charity .entry-content .charity-video iframe {
-    height: 483.34px;
-    width: 728px; }
-  .single-charity .entry-content .main-content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    width: 1240px;
-    margin: auto; }
-    .single-charity .entry-content .main-content .single-content {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex; }
-      .single-charity .entry-content .main-content .single-content .content-image {
-        width: 50%; }
+  .single-charity .entry-content .charity-video {
+    text-align: center; }
+    .single-charity .entry-content .charity-video iframe {
+      height: 483.34px;
+      width: 728px; }
 
 .single-charity .browse-charities-title {
   text-align: center;
@@ -764,9 +760,18 @@ ol.flickity-page-dots {
   line-height: 31px; }
 
 /* Main Content Section */
+.single-content .chimp-donate-form {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto; }
+
 .footer-sidebar, .site-footer {
   background-color: #14225F; }
-<<<<<<< HEAD
 
 .why-donate {
   text-align: center; }
@@ -824,5 +829,3 @@ ol.flickity-page-dots {
               box-shadow: none; }
     .custom-plan .single-custom-plan button {
       margin-top: -1rem; }
-=======
->>>>>>> d0445e16ed318c7fa56a62cc4b345c6e24de909d
